force-app/main/default/objects/User_History__c/User_History__c.object-meta.xml
<CustomObject>
    <description>Object to track changes on the User object as field history tracking is not available for this object.</description>
    <label>User History</label>
    <nameField>
        <displayFormat>UH-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>