force-app/main/default/objects/User_History__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>